# magic-squares-5x5

./: CHANGELOG.md  README.md  magic-squares-5x5.cabal
app/: Main.hs
src/: Enumerate5x5.hs
