cabal-version:      2.4
name:               magic-squares-5x5
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             ajenkins-cargometrics
maintainer:         ajenkins@cargometrics.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  MyLib, Enumerate5x5

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0, containers, array
    hs-source-dirs:   src
    default-language: Haskell2010

executable magic-squares-5x5
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.3.0,
        format-numbers,
        text,
        magic-squares-5x5

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options: -threaded
